--- a/index.html
+++ b/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap Documentation</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- Header -->
+
+    <!-- Nav -->
+    <nav id="navbar">
+        <header></header>
+        <a class="nav-link" href="#introduction">Introduction</a>
+        <a class="nav-link" href="#installation">Installation</a>
+        <a class="nav-link" href="#responsive">Responsive Break Points</a>
+        <a class="nav-link" href="#typography">Typography</a>
+        <a class="nav-link" href="#spacing">Spacing</a>
+        <a class="nav-link" href="#icons">Icons</a>
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#license">License</a>
+    </nav>
+    <!-- Main  -->
+    <main id="main-doc">
+        <!-- Section 1 -->
+        <section class="main-section" id="introduction">
+            <header>Introduction</header>
+        </section>
+        <!-- Section 2 -->
+        <section class="main-section" id="installation">
+            <header>Installation</header>
+        </section>
+        <!-- Section 3 -->
+        <section class="main-section" id="responsive">
+            <header>Responsive Break Points</header>
+        </section>
+        <!-- Section 4 -->
+        <section class="main-section" id="typography">
+            <header>Typography</header>
+        </section>
+        <!-- Section 5 -->
+        <section class="main-section" id="spacing">
+            <header>Spacing</header>
+        </section>
+        <!-- Section 6 -->
+        <section class="main-section" id="icons">
+            <header>Icons</header>
+        </section>
+        <!-- Section 7 -->
+        <section class="main-section" id="about">
+            <header>About</header>
+        </section>
+        <!-- Section 8 -->
+        <section class="main-section" id="license">
+            <header>License</header>
+        </section>
+    </main>
+
+    <!-- Footer -->
+
 </body>
+
 </html>
