--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                         your ideas or build your entire app with our Sass variables and mixins, responsive grid system,
                         extensive prebuilt components, and powerful plugins built on jQuery.</p>
                 </section>
-                <hr>
                 <!-- Section 2 -->
                 <section class="main-section" id="quick-start">
                     <header>
@@ -81,7 +80,6 @@
                                 &lt;script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">&lt;/script&gt;
                         </code></pre>
                 </section>
-                <hr>
                 <!-- Section 3 -->
                 <section class="main-section" id="responsive">
                     <header>
@@ -111,7 +109,6 @@
                                 <span style="color: lightblue">@media</span> (min-width: <span style="color: red">1200px</span>) { ... } <br>
                         </code></pre>
                 </section>
-                <hr>
                 <!-- Section 4 -->
                 <section class="main-section" id="typography">
                     <header>
@@ -175,35 +172,48 @@
                            <span style="color:lightblue">&lt;h6></span>h6. Bootstrap heading<span style="color:lightblue">&lt;/h6&gt;</span><br>
                     </code></pre>
                 </section>
-                <hr>
                 <!-- Section 5 -->
                 <section class="main-section" id="spacing">
                     <header>
                         <h2>Spacing</h2>
                     </header>
+                    <p>Bootstrap includes a wide range of shorthand responsive margin and padding utility classes to
+                        modify an element’s appearance.</p>
+                    <h4>How it works</h4>
+                    <p>Assign responsive-friendly <code>margin</code> or <code>padding</code> values to an element or a
+                        subset of
+                        its sides with
+                        shorthand classes. Includes support for individual properties, all properties, and vertical and
+                        horizontal properties. Classes are built from a default Sass map ranging from <code>.25rem</code>
+                        to <code>3rem</code>.</p>
+                    <h4>Notation</h4>
+                    <p>Spacing utilities that apply to all breakpoints, from <code>xs</code> to <code>xl</code>, have
+                        no breakpoint abbreviation
+                        in them. This is because those classes are applied from <code>min-width: 0</code> and up, and
+                        thus are not
+                        bound by a media query. The remaining breakpoints, however, do include a breakpoint
+                        abbreviation.</p>
+                    <p>The classes are named using the format <code>{property}{sides}-{size}</code> for <code>xs</code> and
+                        <code>{property}{sides}-{breakpoint}-{size}</code> for <code>sm</code>, <code>md</code>, <code>lg</code>, and <code>xl</code>.</p>
                 </section>
-                <hr>
                 <!-- Section 6 -->
                 <section class="main-section" id="icons">
                     <header>
                         <h2>Icons</h2>
                     </header>
                 </section>
-                <hr>
                 <!-- Section 7 -->
                 <section class="main-section" id="about">
                     <header>
                         <h2>About</h2>
                     </header>
                 </section>
-                <hr>
                 <!-- Section 8 -->
                 <section class="main-section" id="license">
                     <header>
                         <h2>License</h2>
                     </header>
                 </section>
-                <hr>
             </main>
         </div>
         <!-- Footer -->
