--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
                         SVG. </p>
                     <ul>
                         <li><a href="https://github.com/danklammer/bytesize-icons" target="_blank">Bytesize</a></li>
-                        <li><a href="https://material.io/tools/icons/?style=baseline" target="_blank">Google Material Icons</a></li>
+                        <li><a href="https://material.io/tools/icons/?style=baseline" target="_blank">Google Material
+                                Icons</a></li>
                         <li><a href="https://ionicons.com/" target="_blank">Ionicons</a></li>
                         <li><a href="https://feathericons.com/" target="_blank">Feather</a></li>
                         <li><a href="http://demo.amitjakhu.com/dripicons/" target="_blank">Dripicons</a></li>
@@ -265,6 +266,35 @@
                     <header>
                         <h2>About</h2>
                     </header>
+                    <p>Learn more about the team maintaining Bootstrap, how and why the project started, and how to get
+                        involved.</p>
+                    <h4>Team</h4>
+                    <p>Bootstrap is maintained by a small team of developers on GitHub. We’re actively looking to grow
+                        this team and would love to hear from you if you’re excited about CSS at scale, writing and
+                        maintaining vanilla JavaScript plugins, and improving build tooling processes for frontend
+                        code.</p>
+                    <h4>History</h4>
+                    <p>Originally created by a designer and a developer at Twitter, Bootstrap has become one of the
+                        most popular front-end frameworks and open source projects in the world.</p>
+
+                    <p>Bootstrap was created at Twitter in mid-2010 by @mdo and @fat. Prior to being an open-sourced
+                        framework, Bootstrap was known as Twitter Blueprint. A few months into development, Twitter
+                        held its first Hack Week and the project exploded as developers of all skill levels jumped in
+                        without any external guidance. It served as the style guide for internal tools development at
+                        the company for over a year before its public release, and continues to do so today.</p>
+
+                    <p>Originally released on Friday, August 19, 2011, we’ve since had over twenty releases, including
+                        two major rewrites with v2 and v3. With Bootstrap 2, we added responsive functionality to the
+                        entire framework as an optional stylesheet. Building on that with Bootstrap 3, we rewrote the
+                        library once more to make it responsive by default with a mobile first approach.</p>
+
+                    <p>With Bootstrap 4, we once again rewrote the project to account for two key architectural
+                        changes: a migration to Sass and the move to CSS’s flexbox. Our intention is to help in a small
+                        way to move the web development community forward by pushing for newer CSS properties, fewer
+                        dependencies, and new technologies across more modern browsers.</p>
+                    <h4>Get involved</h4>
+                    <p>Get involved with Bootstrap development by opening an issue or submitting a pull request. Read
+                        our contributing guidelines for information on how we develop.</p>
                 </section>
                 <!-- Section 8 -->
                 <section class="main-section" id="license">
