passing all tests

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!-- Test script -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <!-- Header <h2>-->
     <div id="grid-container">
         <div id="h-container">
@@ -25,8 +27,8 @@
             <nav id="navbar">
                 <header></header>
                 <a class="nav-link" href="#introduction">Introduction</a>
-                <a class="nav-link" href="#quick-start">Quick Start</a>
-                <a class="nav-link" href="#responsive">Responsive Break Points</a>
+                <a class="nav-link" href="#quick_start">Quick Start</a>
+                <a class="nav-link" href="#responsive_break_points">Responsive Break Points</a>
                 <a class="nav-link" href="#typography">Typography</a>
                 <a class="nav-link" href="#spacing">Spacing</a>
                 <a class="nav-link" href="#icons">Icons</a>
@@ -50,7 +52,7 @@
                         extensive prebuilt components, and powerful plugins built on jQuery.</p>
                 </section>
                 <!-- Section 2 -->
-                <section class="main-section" id="quick-start">
+                <section class="main-section" id="quick_start">
                     <header>
                         <h2>Quick Start</h2>
                     </header>
@@ -81,7 +83,7 @@
                         </code></pre>
                 </section>
                 <!-- Section 3 -->
-                <section class="main-section" id="responsive">
+                <section class="main-section" id="responsive_break_points">
                     <header>
                         <h2>Responsive Break Points</h2>
                     </header>
