final styling and media queries

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap Documentation</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <!-- Test script -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
     <!-- Header <h2>-->
     <div id="grid-container">
         <div id="h-container">
@@ -327,19 +332,31 @@
                         </li>
                         <li>Hold the creators or copyright holders of Bootstrap liable </li>
                         <li>Redistribute any piece of Bootstrap without proper attribution</li>
-                        <li>Use any marks owned by Twitter in any way that might state or imply that Twitter endorses your distribution</li>
-                        <li>Use any marks owned by Twitter in any way that might state or imply that you created the Twitter software in question</li>
+                        <li>Use any marks owned by Twitter in any way that might state or imply that Twitter endorses
+                            your distribution</li>
+                        <li>Use any marks owned by Twitter in any way that might state or imply that you created the
+                            Twitter software in question</li>
                     </ul>
                     <h4>It does not require you to:</h4>
                     <ul>
-                        <li>Include the source of Bootstrap itself, or of any modifications you may have made to it, in any redistribution you may assemble that includes it</li>
-                        <li>Submit changes that you make to Bootstrap back to the Bootstrap project (though such feedback is encouraged)</li>
+                        <li>Include the source of Bootstrap itself, or of any modifications you may have made to it, in
+                            any redistribution you may assemble that includes it</li>
+                        <li>Submit changes that you make to Bootstrap back to the Bootstrap project (though such
+                            feedback is encouraged)</li>
                     </ul>
                     <p>The full Bootstrap license is located in the project repository for more information.</p>
                 </section>
             </main>
         </div>
         <!-- Footer -->
+        <div id="f-container">
+            <ul class="social-icons">
+                <li><a href="https://www.linkedin.com/in/cameronmfuller/" class="social-icon" target="_blank"> <i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/Cam-F" class="social-icon" target="_blank"> <i class="fa fa-github"></i></a></li>
+                <li><a href="https://codepen.io/Cam-F/" class="social-icon" target="_blank"> <i class="fa fa-codepen"></i></a></li>
+            </ul>
+            <!-- <p id="tag"><kbd>Made by Cam</kbd></p> -->
+        </div>
     </div>
 </body>
 
